--- a/index.html
+++ b/index.html
@@ -3,68 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Responsive Website</title>
-    <style>
-        header, footer {
-            display: flex;
-            justify-content: space-between;
-            padding: 1rem;
-            background-color: #F3F3F3;
-            flex-wrap: wrap;
-        }
-        header nav a {
-            margin-left: 1rem;
-        }
-        .logo-placeholder {
-            width: 100px;
-            height: 40px;
-            background-color: #ccc;
-        }
-        .body-section {
-            margin: 2rem;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: #fff;
-            text-decoration: none;
-        }
-        @media (max-width: 767px) {
-            header nav {
-                order: -1;
-                width: 100%;
-                text-align: center;
-            }
-            header nav a {
-                display: inline-block;
-                margin-left: 0;
-                margin-right: 1rem;
-            }
-        }
-    </style>
+    <title>MDL Website</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- Add your custom styles here -->
 </head>
 <body>
-    <header>
-        <div class="logo-placeholder"></div>
-        <nav>
-            <a href="#blog">Blog</a>
-            <a href="#placeholder">Placeholder</a>
-            <a href="#contact-us">Contact Us</a>
-        </nav>
+    <!-- Header -->
+    <header class="mdl-layout_header mdl-layout_header--scroll">
+        <div class="mdl-layout__header-row">
+            <!-- Logo placeholder -->
+            <div class="logo-placeholder" style="width: 100px; height: 40px; background-color: #ccc;"></div>
+            <!-- Navigation -->
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="#blog">Blog</a>
+                <a class="mdl-navigation__link" href="#placeholder">Placeholder</a>
+                <a class="mdl-navigation__link" href="#contact-us">Contact Us</a>
+            </nav>
+        </div>
     </header>
-    <div class="body-section">
-        <h1>Main Header</h1>
-        <a href="#" class="cta-button">CTA Button</a>
-        <div class="image-placeholder" style="width:300px;height:200px;background-color:#ccc;"></div>
-    </div>
-    <div class="body-section">
-        <h2>Random Catchphrase</h2>
-        <a href="#" class="cta-button">CTA Button</a>
-    </div>
-    <footer>
-        <p>Rebecca, Junaid, Izzi, Steyn, Nicole,</p>
-        <p>the bestest designers at Luno</p>
+    <!-- Body -->
+    <main class="mdl-layout__content">
+        <section class="body-section" style="padding: 2rem;">
+            <h1>Main Header</h1>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">CTA Button</button>
+            <div class="image-placeholder" style="width:300px;height:200px;background-color:#ccc;"></div>
+        </section>
+        <section class="body-section" style="padding: 2rem;">
+            <h2>Random Catchphrase</h2>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">CTA Button</button>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Rebecca, Junaid, Izzi, Steyn, Nicole,</div>
+            <small>the bestest designers at Luno</small>
+        </div>
     </footer>
 </body>
 </html>
